<resources>
    <string name="app_name">PukuEnamCapstone</string>
    <string name="informatif">Informatif di pagi hari hanya butuh 5 menit!</string>
    <string name="nikmati">nikmati berita terhangat yang up-to-date setiap paginya melalui inbox email-mu</string>
    <string name="Mulai">Mulai Sekarang</string>
    <string name="Belum">Belum punya akun?</string>
    <string name="Daftar">Daftar</string>
    <string name="Selamat_Datang">Selamat Datang!</string>
    <string name="Silahkan_Masuk">Silahkan masuk untuk dengan data yang terdaftar.</string>
    <string name="Email">Email</string>
    <string name="Sandi">Kata Sandi</string>
    <string name="Username">Username</string>
    <string name="email_error">".com"</string>
    <string name="password_error">Password must be more than 8 characters</string>
    <string name="default_web_client_id">1024262919795-lbhjovkdvurb2rf6us5rk6r2nvbqglhs.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="Languages">
        <item>Tribun</item>
        <item>Detik</item>
        <item>Kompas</item>
        <item>CNN</item>
        <item>Suara</item>
    </string-array>
</resources>